--- a/style.css
+++ b/style.css
@@ -28,6 +28,17 @@ a:active {
   margin-left: -400px;
 }
 
+.testlinkpage{
+  width: 500px;
+  height: 500px;
+  margin: 0 auto;
+  position: absolute;
+  left: 50%;
+  top: 60%;
+  margin-left: -250px;
+  margin-top: -250px;
+}
+
 .linkpage{
   height: 400px;
   width: 800px;
