--- a/style.css
+++ b/style.css
@@ -29,14 +29,10 @@ a:active {
 }
 
 .testlinkpage{
-  width: 500px;
-  height: 500px;
-  margin: 0 auto;
   position: absolute;
+  top: 50%;
   left: 50%;
-  top: 60%;
-  margin-left: -250px;
-  margin-top: -250px;
+  transform: translate(-50%, -50%);
 }
 
 .linkpage{
