--- a/style.css
+++ b/style.css
@@ -19,13 +19,10 @@ a:active {
 }
 
 .homepage{
-  height: 200px;
-  width: 800px;
-  position: fixed;
+  position: absolute;
   top: 50%;
   left: 50%;
-  margin-top: -100px;
-  margin-left: -400px;
+  transform: translate(-50%, -50%);
 }
 
 .linkpage{
@@ -33,6 +30,16 @@ a:active {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.testhomepage{
+  height: 200px;
+  width: 800px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin-top: -100px;
+  margin-left: -400px;
 }
 
 .testlinkpage{
