--- a/style.css
+++ b/style.css
@@ -19,10 +19,11 @@ a:active {
 }
 
 .homepage{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;  /* center p horizontally */
+  align-items: center;      /* center p vertically */
+  height: 90vh;
 }
 
 .linkpage{
