--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ a:active {
   justify-content: center;  /* center p horizontally */
   align-items: center;      /* center p vertically */
   height: 90vh;
+  min-height: 90vh;
 }
 
 .linkpage{
