--- a/style.css
+++ b/style.css
@@ -34,6 +34,17 @@ a:active {
   transform: translate(-50%, -50%);
 }
 
+.projectpage{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;  /* center p horizontally */
+  align-items: left;      /* center p vertically */
+  height: 100%;
+  padding: 5em;
+  margin: auto;
+  width: 800px;
+}
+
 .testhomepage{
   height: 200px;
   width: 800px;
@@ -54,7 +65,7 @@ a:active {
   margin-left: -400px;
 }
 
-.projectpage{
+.testprojectpage{
   height: 400px;
   width: 800px;
   position: absolute;
