--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ a:active {
   align-items: center;      /* center p vertically */
   height: 80vh;
   width: 100%;
-  max-width: 100%;
+  min-width: 100%;
   min-height: 80vh;
 }
 
