--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ a:active {
   justify-content: center;  /* center p horizontally */
   align-items: center;
   height: 80vh;
-  margin: auto 0;
+  width: 100vw;
 }
 
 .linkpage{
