--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ a:active {
   display: flex;
   flex-direction: column;
   width: 60%;
-  height: 70vh; 
+  height: 80vh; 
 }
 
 body{
@@ -47,7 +47,8 @@ body{
   align-items: center;
   justify-content: center;
   height: 100vh;
-  margin: 0;
+  margin-left: -60px;
+  margin-right: -60px;
 }
 
 .testprojectpage{
