--- a/style.css
+++ b/style.css
@@ -113,7 +113,6 @@ body{
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 40%;
-  max-width: 100%;
-  min-width: 70%;
+  max-width: 50%;
+  height: auto;
 }
