--- a/style.css
+++ b/style.css
@@ -21,8 +21,8 @@ a:active {
 .homepage{
   display: flex;
   flex-direction: column;
-  justify-content: center;  /* center p horizontally */
-  align-items: center;
+  justify-content: center;  /* center horizontally */
+  align-items: center; /* center vertically */ 
   height: 90vh;
   width: 100vw;
 }
@@ -75,8 +75,8 @@ body{
   text-align: left;
   font-family: menlo;
   font-size: 50px;
-  color: #17c3b2; 
   margin-bottom: 10px; 
+  color: #17c3b2; 
 }
 
 .projects-title{
