--- a/style.css
+++ b/style.css
@@ -37,7 +37,8 @@ a:active {
 .projectpage{
   display: flex;
   flex-direction: column;
-  width: 60vw;
+  margin: 0 auto;
+  max-width: 700px;
   height: 80vh; 
 }
 
