--- a/style.css
+++ b/style.css
@@ -29,9 +29,11 @@ a:active {
 
 .linkpage{
   position: absolute;
-  top: 50%;
+  /*top: 50%;
   left: 40%;
-  transform: translate(-40%, -50%);
+  transform: translate(-40%, -50%);*/
+  margin: 0 auto;
+  max-width: 700px;
 }
 
 .projectpage{
