--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ a:active {
   /*top: 50%;
   left: 40%;
   transform: translate(-40%, -50%);*/
-  margin: 0 auto;
+  margin: 2% 5% 5% 0%;
   max-width: 700px;
 }
 
