--- a/style.css
+++ b/style.css
@@ -32,14 +32,15 @@ a:active {
   /*top: 50%;
   left: 40%;
   transform: translate(-40%, -50%);*/
-  margin: 2% 5% 5% 0%;
+  padding: 10px; 
   max-width: 700px;
 }
 
 .projectpage{
   display: flex;
   flex-direction: column;
-  margin: 0 auto;
+  /*margin: 0 auto;*/
+  padding: 10px;
   max-width: 700px;
   height: 80vh; 
 }
