--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ a:active {
   /*top: 50%;
   left: 40%;
   transform: translate(-40%, -50%);*/
-  padding: 10px; 
+  padding-left: 10px; 
   max-width: 700px;
 }
 
