--- a/style.css
+++ b/style.css
@@ -42,6 +42,8 @@ a:active {
   flex-direction: column;
   /*margin: 0 auto;*/
   padding: 10px;
+  padding-bottom: 0;
+  padding-top: 0;
   max-width: 700px;
   height: 80vh; 
 }
