--- a/style.css
+++ b/style.css
@@ -42,8 +42,8 @@ a:active {
 .projectpage{
   display: flex;
   flex-direction: column;
-  /*margin: 0 auto;*/
-  padding: 20px;
+  margin: 0 auto;
+  padding: 10px;
   max-width: 700px;
   height: 80vh; 
 }
