--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ a:active {
 .projectpage{
   display: flex;
   flex-direction: column;
-  margin: 0 auto;
+  margin: 0 0;
   padding: 10px;
   max-width: 700px;
   height: 80vh; 
