--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ a:active {
   transform: translate(-40%, -50%);*/
   padding: 10px; 
   max-width: 700px;
-  height: 60vh;
+  height: 70%;
 }
 
 .projectpage{
@@ -54,16 +54,6 @@ body{
   align-items: center;
   justify-content: center;
   height: 90vh;
-}
-
-.testprojectpage{
-  height: 400px;
-  width: 800px;
-  position: absolute;
-  top: 30%;
-  left: 50%;
-  margin-top: -100px;
-  margin-left: -400px;
 }
 
 .title{
