--- a/style.css
+++ b/style.css
@@ -36,7 +36,8 @@ a:active {
   transform: translate(-40%, -50%);*/
   padding: 10px; 
   max-width: 700px;
-  height: 70%;
+  height: 100vh;
+  margin-top: 7%;
 }
 
 .projectpage{
