--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ a:active {
   transform: translate(-40%, -50%);*/
   padding: 10px; 
   max-width: 700px;
+  max-height: 100vh;
 }
 
 .projectpage{
