--- a/style.css
+++ b/style.css
@@ -30,13 +30,14 @@ a:active {
 .linkpage{
   display: flex;
   flex-direction: column;
+  justify-content: center;  /* center horizontally */
   /*position: absolute;*/
   /*top: 50%;
   left: 40%;
   transform: translate(-40%, -50%);*/
   padding: 10px; 
   max-width: 700px;
-  max-height: 100vh;
+  max-height: 90vh;
 }
 
 .projectpage{
