--- a/style.css
+++ b/style.css
@@ -34,9 +34,9 @@ a:active {
   /*top: 50%;
   left: 40%;
   transform: translate(-40%, -50%);*/
-  padding: 10px; 
+  padding: 10px 0 0 10px; 
   max-width: 700px;
-  max-height: 80vh;
+  height: 65vh;
 }
 
 .projectpage{
