--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ a:active {
   transform: translate(-40%, -50%);*/
   padding: 10px 0 0 10px; 
   max-width: 700px;
-  height: 400px;
+  height: 70%;
 }
 
 .projectpage{
