--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ a:active {
   /*top: 50%;
   left: 40%;
   transform: translate(-40%, -50%);*/
-  padding: 10px 0 0 10px; 
+  padding: 5%; 
   max-width: 700px;
   height: 70%;
 }
