--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ a:active {
   /*top: 50%;
   left: 40%;
   transform: translate(-40%, -50%);*/
-  padding: 5%; 
+  padding: 5%; /* fix something here */ 
   max-width: 700px;
   height: 70%;
 }
