--- a/style.css
+++ b/style.css
@@ -95,7 +95,21 @@ body{
 .page-body{
   text-align: left;
   font-family: helvetica;
-  font-size: 17px; 
+  font-size: 16px; 
+  line-height: 1.4;
+}
+
+.tagline{
+  font-size: 18px;
+  font-style: italic;
+}
+
+h4{
+  font-family: menlo;
+  font-size: 19px;
+  background: #ffc7c9;
+  color: black;
+  padding: 6px;
 }
 
 .home{
@@ -109,4 +123,6 @@ body{
   flex-direction: column;
   margin: auto;
   max-width: 370px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
